# alcor-v2-sdk

./: .babelrc  .gitignore  .npmignore  LICENSE  README.md  after_ref  babel.config.json  baseline-results.json  before_ref  jest.config.js  package-lock.json  package.json  pruning-results.json  test3.ts  tsconfig.json  worker.js
.claude/: settings.local.json
benchmark-results/: split-allpools-baseline.json  split-allpools-baseline.md  split-allpools-current.json  split-allpools-wax-usdt-sweep.json  split-allpools-wax-usdt-sweep.md  split-baseline.json  split-baseline.md  split-current.json  split-optimization-report.md
examples/: getPoolPrices.ts  getPositionAmounts.ts  getTrateRoute.ts
examples/utils/: rpc.js  rpc.ts
src/: index.ts  internalConstants.ts
test/: benchmark-pruning.ts  benchmark.split.allpools.js  benchmark.split.js  benchmark.trade.ts  bestTradeExactOut.test.ts  currencyAmount.test.js  currencyAmount.test.ts  encodeSqrtRatioX64.test.ts  fraction.test.js  fraction.test.ts  isSorted.test.ts  maxLiquidityForAmounts.test copy.ts  maxLiquidityForAmounts.test.ts  mostSignificantBit.test.ts  nearestUsableTick.test.ts  percent.test.js  percent.test.ts  pool.test.ts  position.test.ts  positionLibrary.test.ts  price.test.js  price.test.ts  priceTickConversions.test.ts  sqrtPriceMath.test.ts  tick.test.js  tick.test.ts  tickDataProvider.test.ts  tickLibrary.test.ts  tickList.test.ts  tickListDataProvider.test.ts  tickMath.test.ts  token.test.ts  trade.test.ts
wasm-route-finder/: Cargo.toml
wasm-route-finder/src/: lib.rs  swap_math.rs  trade.rs  u256.rs
(+40 files in other folders)
